# lion-heart

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  bundler.toml
.evva/plans/: evva-drive-pedal.md
.github/workflows/: ci.yml  release.yml
app/lion-heart/: Cargo.toml
app/lion-heart/src/: cli.rs  leveling.rs  main.rs  recorder.rs  render.rs  session.rs  setlist.rs  song_loader.rs
app/lion-heart/src/commands/: devices.rs  jam.rs  latency.rs  level.rs  mod.rs  render.rs  run.rs
app/lion-heart/src/gui/: browser.rs  eq.rs  knob.rs  meter.rs  mod.rs  spectrum.rs  theme.rs  tuner.rs  waveform.rs
crates/lh-assets/: Cargo.toml
crates/lh-assets/src/: lib.rs  wav.rs
crates/lh-core/: Cargo.toml
crates/lh-core/src/: drive_law.rs  global_eq.rs  lib.rs  preset.rs  tempo.rs
crates/lh-dsp/: Cargo.toml
crates/lh-dsp/benches/: effects.rs
crates/lh-dsp/src/: acoustic.rs  biquad.rs  cab.rs  comp.rs  delay.rs  drive.rs  eq.rs  gate.rs  lib.rs  limiter.rs  looper.rs  loudness.rs  modulation.rs  oversample.rs  param_eq.rs  power.rs  reverb.rs  swap.rs  testutil.rs  tuner.rs
crates/lh-dsp/src/blocks/: biquad.rs  grain.rs  mod.rs  smooth.rs  wdf.rs
crates/lh-dsp/src/drive/: angry_charlie.rs  angry_charlie_v2.rs  bd2.rs  centaur.rs  classic.rs  evva.rs  fuzz_face.rs  jan_ray.rs  mod.rs  monster5150.rs  overdrive.rs  red_charlie.rs  screamer.rs  sd1.rs  ts9.rs
crates/lh-dsp/src/dynamics/: comp.rs  gate.rs  limiter.rs  mod.rs
crates/lh-dsp/src/dynamics/comp/: fet.rs  mod.rs  opto.rs  vca.rs
crates/lh-dsp/src/eq/: chain.rs  global.rs  mod.rs  parametric.rs
crates/lh-dsp/src/filter/: autowah.rs  mod.rs  wah.rs
crates/lh-dsp/src/pitch/: mod.rs  octaver.rs
crates/lh-dsp/src/practice/: groove.rs  metronome.rs  mod.rs  song.rs  wsola.rs
crates/lh-dsp/src/time/: delay.rs  mod.rs  reverb.rs
crates/lh-dsp/src/time/delay/: digital.rs  mod.rs  tape.rs  vintage.rs
crates/lh-dsp/src/time/reverb/: bloom.rs  chorale.rs  cloud.rs  hall.rs  magneto.rs  mod.rs  nonlinear.rs  plate.rs  reflections.rs  room.rs  shimmer.rs  spring.rs  swell.rs
crates/lh-dsp/tests/: alias.rs
crates/lh-engine/: Cargo.toml
crates/lh-engine/benches/: spillover.rs
crates/lh-engine/src/: lib.rs
crates/lh-engine/tests/: chain.rs  recording_taps.rs
crates/lh-io/: Cargo.toml
crates/lh-io/src/: devices.rs  latency.rs  lib.rs  passthrough.rs  stats.rs  stream.rs
crates/lh-midi/: Cargo.toml
crates/lh-midi/src/: lib.rs
crates/lh-nam/: Cargo.toml
crates/lh-nam/benches/: amp.rs
crates/lh-nam/src/: lib.rs
crates/lh-nam/tests/: nam.rs
crates/lh-nam/tests/fixtures/: README.md
docs/: benchmarks.md  install.md  latency.md  release.md  white-paper.md
docs/PRD/: 001-per-pedal-knobs.md  002-chain-builder.md  003-global-eq.md  004-delay-family.md  005-reverb-family.md  006-mod-family-expansion.md  007-filter-family-autowah.md  008-expression-pedal.md  009-snapshots.md  010-spillover.md  011-parametric-eq-pedal.md  012-global-tempo.md  013-looper.md  014-recorder-reamp.md  015-comp-family.md  016-setlists-leveling.md  017-power-amp.md  018-pitch-family.md  019-practice-tools.md  020-wdf-tube-screamer.md  021-wdf-feedback-overdrive.md
docs/adr/: 001-gui-framework.md  002-mono-chain-through-m5.md  003-drive-model-registry.md  004-per-pedal-params.md  005-dynamic-chain.md  006-output-stage-global-eq.md  007-delay-family-and-tap.md  008-reverb-family.md  009-mod-family-expansion.md  010-filter-family.md  011-expression-pedal.md  012-snapshots.md  013-spillover.md  014-parametric-eq-pedal.md  014-tempo-sync.md  015-dual-ir-cab.md  015-global-tempo.md  016-looper.md  016-pitch-family.md  017-parametric-eq-pedal.md  018-global-tempo.md  019-looper.md  020-aux-monitor-mix.md  021-drum-groove.md  022-song-player.md  023-recorder-reamp.md  024-power-amp.md  025-comp-family.md  026-setlists-and-leveling.md  027-cross-platform-port.md  028-wdf-tube-screamer.md  029-wdf-feedback-overdrive.md
docs/tone_revolution/: overview.md
docs/tone_revolution/phase/: 01-fast-nonlinear-root.md  02-tonestack-framework.md  03-wdf-adaptor-framework.md  04-opamp-overdrive-family.md  05-fuzz-transistor-family.md  06-waveshaper-adaa.md  07-neural-tube-family.md  08-rnd-platform.md
plugin/lion-heart-plugin/: Cargo.toml
plugin/lion-heart-plugin/src/: lib.rs
scripts/: codesign-notarize.sh
spikes/: Cargo.toml  README.md
spikes/common/: Cargo.toml
spikes/common/src/: lib.rs
spikes/iced/: Cargo.toml
spikes/iced/src/: main.rs
spikes/vizia/: Cargo.toml
spikes/vizia/src/: main.rs
xtask/: Cargo.toml
