[package]
name = "lion-heart"
description = "Lion-Heart — open-source guitar amp & multi-effects processor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lh-core.workspace = true
lh-dsp.workspace = true
lh-engine.workspace = true
lh-nam.workspace = true
lh-assets.workspace = true
lh-io.workspace = true
lh-midi.workspace = true
rtrb.workspace = true
iced.workspace = true
assert_no_alloc.workspace = true
clap.workspace = true
anyhow.workspace = true
ctrlc.workspace = true
serde.workspace = true
serde_json.workspace = true
# Spectrum analyzer FFT (GUI thread only — never on the audio path).
realfft.workspace = true
