[package]
name = "lh-engine"
description = "Real-time chain runner for Lion-Heart: node lifecycle and lock-free parameter plumbing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lh-core.workspace = true
lh-dsp.workspace = true
rtrb.workspace = true
thiserror.workspace = true
