[package]
name = "lh-io"
description = "Audio device management, duplex streaming, and latency measurement for Lion-Heart"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lh-core.workspace = true
cpal.workspace = true
rtrb.workspace = true
thiserror.workspace = true
assert_no_alloc.workspace = true
