[package]
name = "lh-nam"
description = "NAM amp block for Lion-Heart: nam-rs integration behind the asset-swap seam"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lh-core.workspace = true
lh-dsp.workspace = true
nam-rs.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "amp"
harness = false
